--- a/index.html
+++ b/index.html
@@ -7,6 +7,25 @@
     <title>Garden</title>
 </head>
 <body>
-    
+    <canvas id="myCanvas"></canvas>
 </body>
+<script>
+    function init() {
+        // Get canvas object from the DOM
+        var canvas = document.getElementById("myCanvas");
+
+        // Get the rendering context for WebGL
+        var gl = canvas.getContext("webgl");
+        if (!gl) {
+            console.log("Failed to get de rendering context for WebGL");
+            return;
+        }
+
+        // Set clear color
+        gl.clearColor(0.0, 0.0, 0.0, 1.0);
+
+        // Clear canvas
+        gl.clear(gl.COLOR_BUFFER_BIT);
+    }
+</script>
 </html>
