--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Garden</title>
 </head>
 <body>
-    <canvas id="myCanvas"></canvas>
+    <canvas id="myCanvas" width="1000" height="500"></canvas>
 </body>
 <script>
     function init() {
@@ -22,7 +22,7 @@
         }
 
         // Set clear color
-        gl.clearColor(0.0, 0.0, 0.0, 1.0);
+        gl.clearColor(1.0, 0.0, 1.0, 1.0);
 
         // Clear canvas
         gl.clear(gl.COLOR_BUFFER_BIT);
