--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         let x = 0;
         let y = 0;
         let brightness = 128;
+        let money = 500;
         
         function drawSquare(x, y, brightness) {
             ctx.fillStyle = `rgb(0, ${brightness}, 0)`;
@@ -65,6 +66,8 @@
             // Add the new square and redraw the canvas
             squares.push({x, y, brightness});
             ctx.clearRect(0, 0, canvas.width, canvas.height);
+            ctx.font = "50px arial";
+            ctx.fillText(money, 0, 0);
             squares.forEach(square => {
                 drawSquare(square.x, square.y, square.brightness);
             });
@@ -80,6 +83,8 @@
             });
             // Redraw the canvas
             ctx.clearRect(0, 0, canvas.width, canvas.height);
+            ctx.font = "50px arial";
+            ctx.fillText(money, 0, 0);
             squares.forEach(square => {
                 drawSquare(square.x, square.y, square.brightness);
             });
