guardar tambien el dinero

--- a/game.html
+++ b/game.html
@@ -13,7 +13,7 @@
     <br><br>
     <button id="new_btn">New square</button>
     <button id="improve_btn">Improve squares</button>
-    <p>Hours:</p><p id="money">1000</p>
+    <p>Hours:</p><p id="money"></p>
     <a id="save_btn" href="index.html">Save & exit</a>
 </body>
 </html>
