repasadas formas de guardar

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div class="main">
         <a id="btn_login" href="login.html" >Log in</a>
-        <a id="btn_guest" href="game.html" >Play as guest</a>
+        <a id="btn_guest" href="game_guest.html" >Play as guest</a>
     </div>
 </body>
 </html>
