--- a/feitosa/game2.html
+++ b/feitosa/game2.html
@@ -18,6 +18,8 @@
             <span id="features_display"></span>
             <h3>Bugs</h3>
             <span id="bugs_display"></span>
+            <h3>Health</h3>
+            <span id="health_display"></span>
         </div>
         <div id="budget">
             <div>
