--- a/feitosa/game2.html
+++ b/feitosa/game2.html
@@ -24,6 +24,7 @@
         <div id="budget">
             <div>
                 <h2>Budget</h2>
+                <p>Available: </p>
                 <span id="budget_display"></span>
             </div>
             <div>
@@ -36,8 +37,8 @@
                     <input type="range" name="Fix Bugs" id="bugs_input" class="slider" min="0" max="10" step="1" value="0">
                 </p>
                 <p>
-                    <label for="health_input">Health: <output id="health_value"></output></label>
-                    <input type="range" name="Improve Health" id="health_input" class="slider" min="0" max="10" step="1" value="0">
+                    <label for="refactor_input">Refactor: <output id="refactor_value"></output></label>
+                    <input type="range" name="Improve Health" id="refactor_input" class="slider" min="0" max="10" step="1" value="0">
                 </p>
             </div>
         </div>
