--- a/feitosa/game2.html
+++ b/feitosa/game2.html
@@ -12,10 +12,14 @@
 </head>
 
 <body>
-    <div class="main">
-        <h1>Project evolution simulator</h1>
+    <div id="main">
+        <header>
+            <h1>Project evolution simulator</h1>
+        </header>
         <div id="stats">
-            <h2>Stats</h2>
+            <div class="title">
+                <h2>Stats</h2>
+            </div>
             <h3>Project Value</h3>
             <span id="value_display"></span>
             <h3>Features</h3>
