probando css (responsive?)

--- a/feitosa/game2.html
+++ b/feitosa/game2.html
@@ -16,27 +16,27 @@
         <h1>Project evolution simulator</h1>
         <h2>Stats</h2>
         <section id="stats">
-            <div>
-                <h3>Value</h3>
+            <div id="value">
+                <b>Value</b>
                 <span id="value_display"></span>
             </div>
-            <div>
-                <h3>Features</h3>
+            <div id="features">
+                <b>Features</b>
                 <span id="features_display"></span>
             </div>
-            <div>
-                <h3>Bugs</h3>
+            <div id="bugs">
+                <b>Bugs</b>
                 <span id="bugs_display"></span>
             </div>
-            <div>
-                <h3>Health</h3>
+            <div id="health">
+                <b>Health</b>
                 <span id="health_display"></span>
             </div>
         </section>
         <h2>Budget</h2>
         <section id="budget">
             <div>
-                <p>Available: </p>
+                <b>Available: </b><br>
                 <span id="budget_display"></span>
             </div>
             <div>
@@ -61,11 +61,11 @@
             </div>
         </section>
         <section id="buttons">
-            <div id="game_buttons">
+            <div class="buttons">
                 <button id="iterate_btn">Iterate</button>
                 <button id="reset_btn">Reset</button>
             </div>
-            <div id="state_buttons">
+            <div class="buttons">
                 <button id="download_btn">Download state</button>
                 <button id="upload_btn">Upload state</button>
             </div>
