--- a/feitosa/game2.html
+++ b/feitosa/game2.html
@@ -15,26 +15,26 @@
     <main>
         <h1>Project evolution simulator</h1>
         <h2>Stats</h2>
-        <section id="stats">
-            <div id="value">
-                <b>Value</b>
+        <section class="stats">
+            <div>
+                <b>Value</b><br>
                 <span id="value_display"></span>
             </div>
-            <div id="features">
-                <b>Features</b>
+            <div>
+                <b>Features</b><br>
                 <span id="features_display"></span>
             </div>
-            <div id="bugs">
-                <b>Bugs</b>
+            <div>
+                <b>Bugs</b><br>
                 <span id="bugs_display"></span>
             </div>
-            <div id="health">
-                <b>Health</b>
+            <div>
+                <b>Health</b><br>
                 <span id="health_display"></span>
             </div>
         </section>
         <h2>Budget</h2>
-        <section id="budget">
+        <section class="budget">
             <div>
                 <b>Available: </b><br>
                 <span id="budget_display"></span>
@@ -60,12 +60,12 @@
                 </p>
             </div>
         </section>
-        <section id="buttons">
-            <div class="buttons">
+        <section class="buttons">
+            <div>
                 <button id="iterate_btn">Iterate</button>
                 <button id="reset_btn">Reset</button>
             </div>
-            <div class="buttons">
+            <div>
                 <button id="download_btn">Download state</button>
                 <button id="upload_btn">Upload state</button>
             </div>
