--- a/v2/index.html
+++ b/v2/index.html
@@ -41,21 +41,21 @@
             </div>
             <div>
                 <p>
-                    <label for="features_input">Features: <output id="features_percent"></output>%(<output
-                            id="features_value"></output>)</label><br>
-                    <input type="range" name="Add Features" id="features_input" class="slider" min="0" max="100"
+                    <label for="features_input">Features: <!-- <output id="features_percent"></output>%( --><output
+                            id="features_value"></output><!-- ) --></label><br>
+                    <input type="range" name="Add Features" id="features_input" class="slider" min="0" max="10"
                         step="1" value="0">
                 </p>
                 <p>
-                    <label for="bugs_input">Bugs: <output id="bugs_percent"></output>%(<output
-                            id="bugs_value"></output>)</label><br>
-                    <input type="range" name="Fix Bugs" id="bugs_input" class="slider" min="0" max="100" step="1"
+                    <label for="bugs_input">Bugs: <!-- <output id="bugs_percent"></output>%( --><output
+                            id="bugs_value"></output><!-- ) --></label><br>
+                    <input type="range" name="Fix Bugs" id="bugs_input" class="slider" min="0" max="10" step="1"
                         value="0">
                 </p>
                 <p>
-                    <label for="refactor_input">Refactor: <output id="refactor_percent"></output>%(<output
-                            id="refactor_value"></output>)</label><br>
-                    <input type="range" name="Improve Health" id="refactor_input" class="slider" min="0" max="100"
+                    <label for="refactor_input">Refactor: <!-- <output id="refactor_percent"></output>%( --><output
+                            id="refactor_value"></output><!-- ) --></label><br>
+                    <input type="range" name="Improve Health" id="refactor_input" class="slider" min="0" max="10"
                         step="1" value="0">
                 </p>
             </div>
